--- a/cryptoShare/package.json
+++ b/cryptoShare/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "framer-motion": "^10.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-particles": "^2.12.2",
+    "react-router-dom": "^6.15.0",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
